--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       run: |
         docker build --help
     - name: Fetch dependencies
+      run: |
         autoconf --version
         cd ci-tools
 
