--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,15 +20,19 @@ jobs:
 
         wget -O iverilog-11_0.tar.gz https://github.com/steveicarus/iverilog/archive/refs/tags/v11_0.tar.gz
         tar xvzf iverilog-11_0.tar.gz
+        echo "Change directory"
         cd iverilog-11_0
-        /bin/sh autoconf
+        echo "Autoconf"
+        /bin/sh ./autoconf.sh
+        echo "Change back"
         cd ..
+        echo "Pack"
         tar czf iverilog-11_0.tar.gz iverilog-11_0
 
         wget -O verilator-4.204.tar.gz https://github.com/verilator/verilator/archive/refs/tags/v4.204.tar.gz
         tar xvzf verilator-4.204.tar.gz
         cd verilator-4.204
-        /bin/sh autoconf
+        /bin/sh ./autoconf
         cd ..
         tar czf verilator-4.204.tar.gz verilator-4.204
 
