--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,8 +13,8 @@ jobs:
     - name: Docker Help
       run: |
         docker build --help
-        apt-get update -y
-        apt-get install -y gperf
+        sudo apt-get update -y
+        sudo apt-get install -y gperf
     - name: Fetch dependencies
       run: |
         autoconf --version
